assets/styles.css
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  vertical-align: baseline;
  font-family: 'Times New Roman', Times, serif;
}

/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}

body {
  line-height: 1;
  width: 100%;
}

ol,
ul {
  list-style: none;
}

blockquote,
q {
  quotes: none;
}

blockquote::before,
blockquote::after,
q::before,
q::after {
  content: '';
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

* {
  box-sizing: border-box;
}

/* NAV BAR */

nav {
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 100%;
  position: fixed;
  top: 0;
  background-color: #fff;
  padding: 0.5em 0;
  border-bottom: 1px solid #e2e2e2;
}

/* TOP LEFT */
.top-left {
  display: flex;
  width: 200px;
  justify-content: space-between;
}

aside > span > a {
  text-decoration: none;
  font-size: 14px;
  line-height: 17px;
  color: #515151;
  padding-top: 1em;
  padding-left: 00.5em;
  font-weight: 500;
}

.writer a {
  text-decoration: none;
  color: #515151;
}

.top-left a {
  text-decoration: none;
  color: #000;
  font-weight: bold;
}

.top-left > a:hover {
  text-decoration: underline;
}

/* TOP RIGHT BUTTONS */

.top-right-btns button {
  background-color: rgb(86, 123, 149);
  border: 1px solid rgb(50, 104, 145);
  font-weight: 700;
  font-size: 11px;
  line-height: 11px;
  padding: 8px;
  border-radius: 0.3em;
  color: #fff;
}

/* MAIN ARTICLE */

main {
  width: 100%;
}

h1 {
  font-family: 'PT Serif', serif;
  font-size: 2.2rem;
  line-height: 3rem;
  font-style: italic;
  font-weight: 500;
  margin-top: 1.5em;
  margin-bottom: 0.8em;
  width: 600px;
  margin-left: auto;
  margin-right: auto;
}

b {
  font-weight: 700;
}

figure {
  width: 65%;
  margin-left: auto;
  margin-right: auto;
}

main img {
  display: block;
  margin: 0 auto;
  width: 100%;
}

main figcaption {
  color: #666;
  font-size: 0.9375rem;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
}

.main-article {
  display: grid;
  display: -ms-grid;
  grid-template-columns: 1fr 1fr 1fr;
  font-family: 'Times New Roman', Times, serif;
  font-size: 1.25rem;
  color: #333;
}

.article-column {
  grid-column: 2/3;
  margin-top: 4em;
}

article p {
  margin-bottom: 15px;
  line-height: 1.875rem;
  font-size: 1.25rem;
  margin-top: 2em;
}

section > p {
  margin-bottom: 15px;
  line-height: 1.875rem;
  font-size: 1.25rem;
  margin-top: 2em;
}

div > p {
  margin-bottom: 15px;
  line-height: 1.875rem;
  font-size: 1.25rem;
  margin-top: 2em;
}

.writer {
  color: #515151;
  font-weight: 700;
  font-size: 16px;
  cursor: pointer;
}

.writer a:hover {
  text-decoration: underline;
}

.article-icons {
  margin-top: 1.5em;
  width: 100%;
}

.article-icons p {
  font-size: 13px;
  font-weight: 500;
  padding-top: 10px;
}

.icons {
  margin-top: -20px;
  display: block;
  float: right;
}

.aside-column {
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

aside {
  display: grid;
  grid-template-columns: 75px 150px;
  grid-auto-rows: auto;
  margin-left: 6em;
  font-size: 14px;
  font-weight: 700;
}

aside > img {
  height: 75px;
  width: 75px;
  margin-bottom: 1em;
}

aside > span {
  display: inline-flex;
}

aside > div {
  grid-column: 1/3;
}

hr {
  margin: 1em 0;
}

.inflation > h3 {
  font-family: 'PT Serif', serif;
  width: 945px;
  margin-left: auto;
  margin-right: auto;
  font-size: 1.25rem;
  line-height: 1.5rem;
  font-weight: 700;
  padding-top: 1em;
}

.inflation > p {
  width: 945px;
  margin-left: auto;
  margin-right: auto;
  font-size: 14px;
  line-height: 18px;
  font-weight: 400;
  color: #666;
  padding-bottom: 1em;
}

.inflation-span {
  width: 52%;
  margin-left: auto;
  margin-right: auto;
}

.inflation-grid {
  margin: 0 auto;
  background: url("./imgs/inflation.png");
  background-repeat: no-repeat;
  background-size: cover;
  width: 945px;
  height: 576px;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-auto-rows: auto;
  grid-gap: 20px;
}

.text {
  font-size: small;
  margin-top: 6em;
}

.text1 {
  grid-column: 1/2;
  grid-row: 2/3;
}

.text2 {
  grid-column: 2/3;
  grid-row: 2/3;
}

.text3 {
  grid-column: 3/4;
  grid-row: 2/3;
}

.text4 {
  grid-column: 4/5;
  grid-row: 2/3;
}

.text5 {
  grid-column: 1/2;
  grid-row: 4/5;
}

.text6 {
  grid-column: 2/3;
  grid-row: 4/5;
}

.text7 {
  grid-column: 3/4;
  grid-row: 4/5;
}

.text8 {
  grid-column: 4/5;
  grid-row: 4/5;
}

.other-version {
  font-size: 0.75rem;
  line-height: 1rem;
  color: rgb(102, 102, 102);
}

.video-span {
  font-size: 16px;
  line-height: 16px;
  font-weight: 400;
  height: 23px;
  color: #666;
}

.comments-social {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.comments-social > button {
  background-color: rgb(86, 123, 149);
  border-color: rgb(50, 104, 145);
  border: 1px solid;
  font-weight: 600;
  border-radius: 3px;
  color: #fff;
  padding: 5px 50px;
  font-size: 0.8125rem;
  letter-spacing: 0.05em;
  line-height: 1.5rem;
  cursor: pointer;
}

.subscribe-subscribe i {
  margin-right: 5px;
}

.comments-social > div > i {
  margin-left: 0.5em;
}

.bottom-articles {
  display: grid;
  margin-top: 4em;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: 500px 500px 250px;
}

/* SUGGESTED ARTICLES */
.suggestions {
  grid-column: 2/5;
  grid-row: 1/2;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 40px 295px 70px;
  border-top: 1px solid grey;
  padding-top: 1em;
}

.suggestions span {
  grid-column: 3/4;
  grid-row: 1/2;
  text-align: right;
  font-size: 0.875rem;
  color: rgb(102, 102, 102);
}

.suggestions img {
  height: 80px;
  width: 80px;
  margin: 1em;
}

.suggestions p {
  color: black;
  cursor: pointer;
  font-weight: 800;
}

.suggestion-schedule {
  font-size: 0.6875rem;
  font-weight: 500;
  letter-spacing: 0.09em;
  color: rgb(51, 51, 51);
  margin: 1em 1.5em;
}

.suggestion-title {
  font-size: 1.125rem;
  font-weight: 700;
  line-height: 1.25rem;
  color: rgb(18, 18, 18);
  margin: 0 1em 0.5em 1em;
}

.suggestion-text {
  font-size: 16px;
  font-weight: 400;
  line-height: normal;
  letter-spacing: normal;
  margin: 0 1em 1em 1em;
}

.suggestion-latest {
  font-size: 0.875rem;
  line-height: 1.125rem;
  letter-spacing: 0.2px;
  font-weight: 700;
  color: rgb(50, 104, 145);
  margin: 1em;
  bottom: 0;
}

.suggestion1 {
  border: 1px solid rgb(212, 208, 208);
  grid-column: 1/2;
  grid-row: 2/3;
  width: 273px;
  height: 295px;
}

.suggestion2 {
  border: 1px solid rgb(212, 208, 208);
  grid-column: 2/3;
  grid-row: 2/3;
  width: 273px;
  height: 295px;
}

.suggestions > div > i {
  float: right;
  margin-top: 2em;
  margin-right: 3em;
  height: 30px;
  width: 30px;
}

.suggestion3 {
  border: 1px solid rgb(212, 208, 208);
  grid-column: 3/4;
  grid-row: 2/3;
  width: 273px;
  height: 295px;
}

.suggestions button {
  grid-column: 2/3;
  grid-row: 3/4;
}

.suggestions > button {
  width: 270px;
  cursor: pointer;
  border-radius: 3px;
  color: white;
  font-size: 15px;
  line-height: 15px;
  letter-spacing: 0.02em;
  padding: 10px 20px;
  background-color: rgb(18, 18, 18);
  font-weight: 700;
  vertical-align: middle;
  border: 1px solid rgb(18, 18, 18);
  margin-top: 2em;
}

/* SPACE ARTICLES */
.space {
  grid-column: 2/5;
  grid-row: 2/3;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 40px 1fr 1fr;
  column-gap: 20px;
  row-gap: 30px;
  border-top: 1px solid grey;
}

.space > p {
  grid-column: 1/2;
  grid-row: 1/2;
  margin-top: 1em;
  color: black;
  cursor: pointer;
  font-weight: 800;
}

.space1 {
  grid-column: 1/2;
  grid-row: 2/3;
}

.space2 {
  grid-column: 2/3;
  grid-row: 2/3;
}

.space3 {
  grid-column: 3/4;
  grid-row: 2/3;
}

.space4 {
  grid-column: 1/2;
  grid-row: 3/4;
}

.space5 {
  grid-column: 2/3;
  grid-row: 3/4;
}

.space6 {
  grid-column: 3/4;
  grid-row: 3/4;
}

.picks > p {
  grid-column: 1/2;
  grid-row: 1/2;
  margin-top: 1em;
  color: black;
  cursor: pointer;
  font-weight: 800;
}

.popular p {
  color: black;
  cursor: pointer;
  font-weight: 800;
  padding-bottom: 1em;
}

.space > div > p {
  color: rgb(18, 18, 18);
  font-size: 18px;
  font-weight: 500;
  line-height: 22px;
  cursor: pointer;
  margin-top: 1em;
  margin-bottom: 1em;
}

.picks > div > p {
  color: rgb(18, 18, 18);
  font-size: 18px;
  font-weight: 500;
  line-height: 22px;
  cursor: pointer;
  margin-top: 1em;
  margin-bottom: 1em;
}

.space > p:hover {
  text-decoration: underline;
}

.space-dates {
  font-size: 12px;
  color: rgb(153, 153, 153);
}

/* EDITOR PICKS */
.picks {
  grid-column: 2/5;
  grid-row: 5/6;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-auto-rows: auto;
  column-gap: 20px;
  row-gap: 30px;
  border-top: 1px solid grey;
}

.picks1 {
  grid-column: 1/2;
  grid-row: 2/3;
}

.picks2 {
  grid-column: 2/3;
  grid-row: 2/3;
}

.picks3 {
  grid-column: 3/4;
  grid-row: 2/3;
}

.picks > p:hover {
  text-decoration: underline;
}

.picks-dates {
  font-size: 12px;
  color: rgb(153, 153, 153);
}

/* POPULAR ARTICLES */

footer li {
  display: inline-flex;
  font-size: 11px;
  line-height: 20px;
  font-weight: 400;
  height: 23px;
  padding: 10px 5px;
  color: #666;
}

.popular {
  grid-column: 5/6;
  grid-auto-rows: auto;
  margin-left: 2em;
  border-top: 1px solid grey;
  padding-top: 1em;
}

.popular li {
  border-top: 1px solid rgb(212, 208, 208);
  font-size: 16px;
  font-family: 'PT Serif', serif;
  line-height: 22px;
  font-weight: 500;
  color: rgb(18, 18, 18);
  padding-top: 1em;
  padding-bottom: 1em;
  letter-spacing: 0.02em;
}

footer li:hover {
  color: rgb(102, 102, 102);
  text-decoration: underline;
  cursor: pointer;
}

.nyt-links > div > ul > li {
  font-size: 14px;
  line-height: 16px;
  font-weight: 500;
  height: 23px;
  cursor: pointer;
}

.popular li:hover {
  cursor: pointer;
  color: rgb(128, 121, 121);
}

.links-title > img {
  height: 36px;
  width: 220px;
  float: left;
}

.links-title {
  width: 68%;
  margin-left: auto;
  margin-right: auto;
  margin-top: 2em;
  margin-bottom: 2em;
  border-top: 2px double grey;
  padding-top: 1em;
}

.links-title > span {
  float: right;
  color: rgb(86, 123, 149);
  font-size: 11px;
  line-height: 11px;
  font-weight: 400;
  cursor: pointer;
}

.nyt-links {
  display: flex;
  justify-content: space-between;
  width: 67%;
  margin: 2em auto;
}

.subscribe-links > .subscribe-subscribe > li {
  font-weight: 700;
}

.nyt-links > div > ul > li:hover {
  text-decoration: underline;
}

.nyt-links > div > ul > :nth-child(1) {
  font-weight: 700;
}

.subscribe-links {
  border-left: 1px solid lightgray;
  padding-left: 2em;
}

.small-links {
  font-size: 11px;
  line-height: 21px;
  font-weight: 500;
  height: 23px;
}

.small-links-separator {
  border-bottom: 1px solid lightgray;
  padding: 0 0 1em 0;
  margin-bottom: 1em;
}

footer {
  width: 67%;
  border-top: 1px solid lightgray;
  margin: 1em auto;
}

footer ul {
  display: flex;
  justify-content: center;
}

